Keep up with SS API updates Keep long text from expanding shift super-wide Switch to placeholder embedded in text (text wraps around icon rather than being obscured) Fix bug which prevented update of position-based shift

--- a/spaces/Fisheye/Fisheye.css
+++ b/spaces/Fisheye/Fisheye.css
@@ -45,6 +45,7 @@
 {
     border: medium double #C4C87C;
     padding: 5px 5px 5px 5px;
+    width: 270;
 }
 
 
